--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
     <main>
       <!-- Hero section -->
-      <section class="section hero">
-        <div class="container">
+      <section class="section hero ">
+        <div class="overlay">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button primary">Order Service</button>
         </div>
