--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
-    >
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    >
+      rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Main page</title>
   </head>
@@ -47,11 +45,17 @@
           <ul class="contact-list list">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="contact-item">
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#envelope"></use>
+                </svg>
                 info@devstudio.com
               </a>
             </li>
             <li class="item">
               <a href="tel:+110001111111" class="contact-item">
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#phone"></use>
+                </svg>
                 +11 (000) 111-11-11
               </a>
             </li>
@@ -62,18 +66,23 @@
 
     <main>
       <!-- Hero section -->
-      <section class="section hero ">
+      <section class="section hero">
         <div class="overlay">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button primary">Order Service</button>
         </div>
       </section>
-      <!-- Strengths section, hidden H2 -->
+      <!-- Strengths section -->
       <section class="section strengths">
         <div class="container">
-          <h2 class="section-title">Strengths</h2>
+          <h2 class="section-title visually-hidden">Strengths</h2>
           <ul class="strengths-list list">
             <li class="item">
+              <div class="item-picture">
+                <svg class="strengths-icon">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Strategy</h3>
               <p class="item-text">
                 Our goal is to identify the businessproblem to walk away with
@@ -81,6 +90,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="item-picture">
+                <svg class="strengths-icon">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Punctuality</h3>
               <p class="item-text">
                 Bring the key message to the brand's audience for the best price
@@ -88,6 +102,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="item-picture">
+                <svg class="strengths-icon">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Diligence</h3>
               <p class="item-text">
                 Research and confirm brands that present the strongest digital
@@ -95,6 +114,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="item-picture">
+                <svg class="strengths-icon">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Technologies</h3>
               <p class="item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -153,82 +177,363 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list list">
             <li class="item">
-              <a href="" class="item-link">
-                <img
-                  src="./images/img1-team-264x260-opt.jpg"
-                  alt="Mark Guerrero product designer"
-                  width="264"
-                  height="260"
-                  class="block-img"
-                >
-                <div class="caption-wrapper">
-                  <h3 class="item-title">Mark Guerrero</h3>
-                  <p class="item-text">Product Designer</p>
-                </div>
-              </a>
+              <img
+                src="./images/img1-team-264x260-opt.jpg"
+                alt="Mark Guerrero product designer"
+                width="264"
+                height="260"
+                class="block-img"
+              >
+              <div class="caption-wrapper">
+                <h3 class="item-title">Mark Guerrero</h3>
+                <p class="item-text">Product Designer</p>
+                <ul class="list socials-list">
+                  <li class="social-item">
+                    <a
+                      href="https://instagram.com"
+                      aria-label="instagram"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://twitter.com"
+                      aria-label="twitter"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://facebook.com"
+                      aria-label="facebook"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://linkedin.com"
+                      aria-label="linkedin"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="item-link">
-                <img
-                  src="./images/img2-team-264x260-opt.jpg"
-                  alt="Tom Ford frontend developer"
-                  width="264"
-                  height="260"
-                  class="block-img"
-                >
-                <div class="caption-wrapper">
-                  <h3 class="item-title">Tom Ford</h3>
-                  <p class="item-text">Frontend Developer</p>
-                </div>
-              </a>
+              <img
+                src="./images/img2-team-264x260-opt.jpg"
+                alt="Tom Ford frontend developer"
+                width="264"
+                height="260"
+                class="block-img"
+              >
+              <div class="caption-wrapper">
+                <h3 class="item-title">Tom Ford</h3>
+                <p class="item-text">Frontend Developer</p>
+                <ul class="list socials-list">
+                  <li class="social-item">
+                    <a
+                      href="https://instagram.com"
+                      aria-label="instagram"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://twitter.com"
+                      aria-label="twitter"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://facebook.com"
+                      aria-label="facebook"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://linkedin.com"
+                      aria-label="linkedin"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="item-link">
-                <img
-                  src="./images/img3-team-264x260-opt.jpg"
-                  alt="Camila Garcia marketing"
-                  width="264"
-                  height="260"
-                  class="block-img"
-                >
-                <div class="caption-wrapper">
-                  <h3 class="item-title">Camila Garcia</h3>
-                  <p class="item-text">Marketing</p>
-                </div>
-              </a>
+              <img
+                src="./images/img3-team-264x260-opt.jpg"
+                alt="Camila Garcia marketing"
+                width="264"
+                height="260"
+                class="block-img"
+              >
+              <div class="caption-wrapper">
+                <h3 class="item-title">Camila Garcia</h3>
+                <p class="item-text">Marketing</p>
+                <ul class="list socials-list">
+                  <li class="social-item">
+                    <a
+                      href="https://instagram.com"
+                      aria-label="instagram"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://twitter.com"
+                      aria-label="twitter"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://facebook.com"
+                      aria-label="facebook"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://linkedin.com"
+                      aria-label="linkedin"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
-              <a href="" class="item-link">
-                <img
-                  src="./images/img4-team-264x260-opt.jpg"
-                  alt="Daniel Wilson ui designer"
-                  width="264"
-                  height="260"
-                  class="block-img"
-                >
-                <div class="caption-wrapper">
-                  <h3 class="item-title">Daniel Wilson</h3>
-                  <p class="item-text">UI Designer</p>
-                </div>
-              </a>
+              <img
+                src="./images/img4-team-264x260-opt.jpg"
+                alt="Daniel Wilson ui designer"
+                width="264"
+                height="260"
+                class="block-img"
+              >
+              <div class="caption-wrapper">
+                <h3 class="item-title">Daniel Wilson</h3>
+                <p class="item-text">UI Designer</p>
+                <ul class="list socials-list">
+                  <li class="social-item">
+                    <a
+                      href="https://instagram.com"
+                      aria-label="instagram"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://twitter.com"
+                      aria-label="twitter"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://facebook.com"
+                      aria-label="facebook"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      href="https://linkedin.com"
+                      aria-label="linkedin"
+                      class="link-social"
+                    >
+                      <svg class="icon-socials">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
 
+    <!-- Clients section -->
+    <section class="section clients">
+      <div class="container">
+        <h2 class="section-title">Customers</h2>
+        <ul class="clients-list list">
+          <li class="item">
+            <a href="" aria-label="client one" class="client-link">
+              <svg class="client-icon">
+                <use href="./images/icons.svg#company-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" aria-label="client two" class="client-link">
+              <svg class="client-icon">
+                <use href="./images/icons.svg#company-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" aria-label="client three" class="client-link">
+              <svg class="client-icon">
+                <use href="./images/icons.svg#company-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" aria-label="client four" class="client-link">
+              <svg class="client-icon">
+                <use href="./images/icons.svg#company-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" aria-label="client five" class="client-link">
+              <svg class="client-icon">
+                <use href="./images/icons.svg#company-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item">
+            <a href="" aria-label="client six" class="client-link">
+              <svg class="client-icon">
+                <use href="./images/icons.svg#company-6"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <footer class="footer">
       <div class="container">
-        <!-- Logo -->
-        <a href="./index.html" aria-label="Webstudio home page" class="logo">
-          <span class="logo-accent">Web</span>Studio
-        </a>
+        <h2 class="visually-hidden">Footer</h2>
+        <!-- Logo block-->
+        <div class="footer-logo">
+          <h3 class="visually-hidden">Logo</h3>
+          <a href="./index.html" aria-label="Webstudio home page" class="logo">
+            <span class="logo-accent">Web</span>Studio
+          </a>
 
-        <!-- This part also can be call to action (<b>) but not important at the moment -->
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+          <!-- This part also can be call to action (<b>) but not important at the moment -->
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <!-- Socials block -->
+        <div class="footer-socials">
+          <h3 class="socials-title">Social media</h3>
+          <ul class="list socials-list">
+            <li class="social-item">
+              <a
+                href="https://instagram.com"
+                aria-label="instagram"
+                class="link-social"
+              >
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href="https://twitter.com"
+                aria-label="twitter"
+                class="link-social"
+              >
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href="https://facebook.com"
+                aria-label="facebook"
+                class="link-social"
+              >
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href="https://linkedin.com"
+                aria-label="linkedin"
+                class="link-social"
+              >
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
