--- a/portfolio.html
+++ b/portfolio.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"
-    >
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    >
+      rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Main page</title>
   </head>
@@ -47,11 +45,17 @@
           <ul class="contact-list list">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="contact-item">
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#envelope"></use>
+                </svg>
                 info@devstudio.com
               </a>
             </li>
             <li class="item">
               <a href="tel:+110001111111" class="contact-item">
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#phone"></use>
+                </svg>
                 +11 (000) 111-11-11
               </a>
             </li>
@@ -63,7 +67,7 @@
     <main>
       <section class="section portfolio">
         <div class="container">
-          <h1 class="section-title">Portfolio</h1>
+          <h1 class="section-title visually-hidden">Portfolio</h1>
           <ul class="filter-list list">
             <li class="item">
               <button type="button" class="button filter">All</button>
@@ -206,16 +210,70 @@
 
     <footer class="footer">
       <div class="container">
-        <!-- Logo -->
-        <a href="./index.html" aria-label="Webstudio home page" class="logo">
-          <span class="logo-accent">Web</span>Studio
-        </a>
+        <h2 class="visually-hidden">Footer</h2>
+        <!-- Logo block-->
+        <div class="footer-logo">
+          <h3 class="visually-hidden">Logo</h3>
+          <a href="./index.html" aria-label="Webstudio home page" class="logo">
+            <span class="logo-accent">Web</span>Studio
+          </a>
 
-        <!-- This part also can be call to action (<b>) but not important at the moment -->
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+          <!-- This part also can be call to action (<b>) but not important at the moment -->
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <!-- Socials block -->
+        <div class="footer-socials">
+          <h3 class="socials-title">Social media</h3>
+          <ul class="list socials-list">
+            <li class="social-item">
+              <a
+                href="https://instagram.com"
+                aria-label="instagram"
+                class="link-social"
+              >
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href="https://twitter.com"
+                aria-label="twitter"
+                class="link-social"
+              >
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href="https://facebook.com"
+                aria-label="facebook"
+                class="link-social"
+              >
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a
+                href="https://linkedin.com"
+                aria-label="linkedin"
+                class="link-social"
+              >
+                <svg class="icon-socials">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
