--- a/portfolio.html
+++ b/portfolio.html
@@ -45,17 +45,17 @@
           <ul class="contact-list list">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="contact-item">
-                <svg class="icon-socials">
+                <!-- <svg class="icon-socials">
                   <use href="./images/icons.svg#envelope"></use>
-                </svg>
+                </svg> -->
                 info@devstudio.com
               </a>
             </li>
             <li class="item">
               <a href="tel:+110001111111" class="contact-item">
-                <svg class="icon-socials">
+                <!-- <svg class="icon-socials">
                   <use href="./images/icons.svg#phone"></use>
-                </svg>
+                </svg> -->
                 +11 (000) 111-11-11
               </a>
             </li>
