--- a/index.html
+++ b/index.html
@@ -45,17 +45,17 @@
           <ul class="contact-list list">
             <li class="item">
               <a href="mailto:info@devstudio.com" class="contact-item">
-                <svg class="icon-socials">
+                <!-- <svg class="icon-socials">
                   <use href="./images/icons.svg#envelope"></use>
-                </svg>
+                </svg> -->
                 info@devstudio.com
               </a>
             </li>
             <li class="item">
               <a href="tel:+110001111111" class="contact-item">
-                <svg class="icon-socials">
+                <!-- <svg class="icon-socials">
                   <use href="./images/icons.svg#phone"></use>
-                </svg>
+                </svg> -->
                 +11 (000) 111-11-11
               </a>
             </li>
@@ -415,9 +415,7 @@
           </ul>
         </div>
       </section>
-    </main>
-
-    <!-- Clients section -->
+       <!-- Clients section -->
     <section class="section clients">
       <div class="container">
         <h2 class="section-title">Customers</h2>
@@ -467,13 +465,16 @@
         </ul>
       </div>
     </section>
+    </main>
+
+   
 
     <footer class="footer">
       <div class="container">
-        <h2 class="visually-hidden">Footer</h2>
+        <!-- <h2 class="visually-hidden">Footer</h2> -->
         <!-- Logo block-->
         <div class="footer-logo">
-          <h3 class="visually-hidden">Logo</h3>
+          <!-- <h3 class="visually-hidden">Logo</h3> -->
           <a href="./index.html" aria-label="Webstudio home page" class="logo">
             <span class="logo-accent">Web</span>Studio
           </a>
@@ -486,7 +487,7 @@
         </div>
         <!-- Socials block -->
         <div class="footer-socials">
-          <h3 class="socials-title">Social media</h3>
+          <p class="socials-title">Social media</p>
           <ul class="list socials-list">
             <li class="social-item">
               <a
